--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 
 environment:
     sdk: ">=2.12.0 <3.0.0"
+    flutter: ">=2.0.0"
 
 dependencies:
     flutter:
@@ -28,11 +29,13 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
     http: ^0.13.3
+    cached_network_image: ^3.1.0
+    flutter_hooks: ^0.18.0
+    hooks_riverpod: ^1.0.0-dev.11
 
 dev_dependencies:
     flutter_test:
         sdk: flutter
-    flutter_riverpod: ^1.0.0-dev.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
