--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
     http: ^0.13.3
-    cached_network_image: ^3.1.0
     flutter_hooks: ^0.18.0
     hooks_riverpod: ^1.0.0-dev.11
+    flutter_cache_manager: ^3.1.3
+    cached_network_image: ^3.1.0+1
 
 dev_dependencies:
     flutter_test:
@@ -63,17 +64,10 @@ flutter:
     # "family" key with the font family name, and a "fonts" key with a
     # list giving the asset and other descriptors for the font. For
     # example:
-    # fonts:
-    #   - family: Schyler
-    #     fonts:
-    #       - asset: fonts/Schyler-Regular.ttf
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
-    #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
-    #       - asset: fonts/TrajanPro_Bold.ttf
-    #         weight: 700
-    #
+    fonts:
+        - family: Press Start 2P
+          fonts:
+              - asset: assets/fonts/PressStart2P-Regular.ttf
+
     # For details regarding fonts from package dependencies,
     # see https://flutter.dev/custom-fonts/#from-packages
